--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-axios": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-notifications-component": "^3.0.3",
     "react-scripts": "4.0.2",
     "react-share": "^4.3.1",
     "styled-components": "^5.2.1",
