--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
